Add option to create new process template and remove option to create processes without template

--- a/Kitodo/src/main/webapp/pages/processEdit.xhtml
+++ b/Kitodo/src/main/webapp/pages/processEdit.xhtml
@@ -28,8 +28,10 @@
             window.onload = function () {checkForm('editForm')};
         </script>
         <h3>
-            <h:outputText value="#{msgs.prozessBearbeiten} (#{ProzessverwaltungForm.process.title})" rendered="#{not empty ProzessverwaltungForm.process.title}"/>
-            <h:outputText value="#{msgs.einenNeuenProzessAnlegen}" rendered="#{empty ProzessverwaltungForm.process.title}"/>
+            <h:outputText value="#{msgs.prozessBearbeiten} (#{ProzessverwaltungForm.process.title})" rendered="#{not empty ProzessverwaltungForm.process.title and not ProzessverwaltungForm.process.template}"/>
+            <h:outputText value="#{msgs.editTemplate} (#{ProzessverwaltungForm.process.title})" rendered="#{not empty ProzessverwaltungForm.process.title and ProzessverwaltungForm.process.template}"/>
+            <h:outputText value="#{msgs.einenNeuenProzessAnlegen}" rendered="#{empty ProzessverwaltungForm.process.title and not ProzessverwaltungForm.process.template}"/>
+            <h:outputText value="#{msgs.newProcessTemplate}" rendered="#{empty ProzessverwaltungForm.process.title and ProzessverwaltungForm.process.template}"/>
         </h3>
         <p:commandButton id="save"
                          widgetVar="save"
