--- a/Kitodo/src/main/webapp/pages/projectEditMetsPopup.xhtml
+++ b/Kitodo/src/main/webapp/pages/projectEditMetsPopup.xhtml
@@ -24,7 +24,8 @@
                       header="#{ProjekteForm.myFilegroup eq null ? msgs.filegroupHinzufuegen : msgs.filegroupBearbeiten}"
                       width="700px"
                       modal="true"
-                      dynamic="true">
+                      dynamic="true"
+                      styleClass="editDialog">
                 <h:form>
                     <p:panelGrid columns="1" layout="grid">
                         <p:row>
