Fix header of the file group dialog

--- a/Kitodo/src/main/webapp/pages/projectEditMetsPopup.xhtml
+++ b/Kitodo/src/main/webapp/pages/projectEditMetsPopup.xhtml
@@ -21,7 +21,7 @@
         <h:body>
             <!-- edit dialog -->
             <p:dialog widgetVar="editFileGroupDialog"
-                      header="#{ProjekteForm.myFilegroup eq null ? msgs.filegroupHinzufuegen : msgs.filegroupBearbeiten}"
+                      header="#{empty ProjekteForm.myFilegroup.name ? msgs.filegroupHinzufuegen : msgs.filegroupBearbeiten}"
                       width="700px"
                       modal="true"
                       dynamic="true"
