Improve extended search button label

--- a/Kitodo/src/main/webapp/pages/processes.xhtml
+++ b/Kitodo/src/main/webapp/pages/processes.xhtml
@@ -27,7 +27,7 @@
                 </p:menuButton>
             </h:form>
             <!-- filters -->
-            <p:button id="search" value="#{msgs.nachEinemBandSuchen}"
+            <p:button id="search" value="#{msgs.extendedSearch}"
                       icon="fa fa-search" iconPos="right"
                       styleClass="button-filled-blue" outcome="searchProcess"/>
             <h:form id="filterMenu">
