--- a/Kitodo/src/main/webapp/pages/processes.xhtml
+++ b/Kitodo/src/main/webapp/pages/processes.xhtml
@@ -22,8 +22,9 @@
             <h3>#{msgs.prozessverwaltung}</h3>
             <h:form id="addForm">
                 <p:menuButton value="#{msgs.newElement}" icon="fa fa-plus-circle fa-lg" iconPos="right" styleClass="button-filled-green">
-                    <!-- TODO: decide whether creating processes from scratch - without template - is required (than we need the next line) -->
-                    <!--<p:menuitem value="#{msgs.newProcess}" outcome="/pages/processEdit" icon="ui-icon-plusthick" />-->
+                    <p:menuitem value="#{msgs.newProcess}" action="#{ProzessverwaltungForm.newProcess}"
+                                immediate="true" style="width: inherit;"
+                                icon="ui-icon-plusthick"/>
                     <p:menuitem value="#{msgs.newBatch}" icon="ui-icon-plusthick" />
                 </p:menuButton>
             </h:form>
