Rename tabs on page 'processEdit'

--- a/Kitodo/src/main/webapp/pages/processEdit.xhtml
+++ b/Kitodo/src/main/webapp/pages/processEdit.xhtml
@@ -59,10 +59,10 @@
             <p:tab title="#{msgs.arbeitsschritte}" id="taskOrder">
                 <ui:include src="/WEB-INF/templates/includes/processEdit/taskList.xhtml"/>
             </p:tab>
-            <p:tab title="#{msgs.prozessvorlagen}" id="processTemplates">
+            <p:tab title="#{msgs.templateProperties}" id="processTemplates">
                 <ui:include src="/WEB-INF/templates/includes/processEdit/templateList.xhtml"/>
             </p:tab>
-            <p:tab title="#{msgs.werkstuecke}" id="workpieces">
+            <p:tab title="#{msgs.workpieceProperties}" id="workpieces">
                 <ui:include src="/WEB-INF/templates/includes/processEdit/workpieceList.xhtml"/>
             </p:tab>
             <p:tab title="#{msgs.eigenschaften}" id="properties">
