Fix the changement of the project's status

--- a/Kitodo/src/main/webapp/pages/projectEditMets.xhtml
+++ b/Kitodo/src/main/webapp/pages/projectEditMets.xhtml
@@ -20,7 +20,7 @@
         <p:selectBooleanButton
                 onLabel="#{msgs.locked}" offLabel="#{msgs.unlocked}"
                 onIcon="fa fa-lock fa-lg" offIcon="fa fa-unlock fa-lg"
-                value="#{ProjekteForm.locked}">
+                value="#{ProjekteForm.lockedMets}">
             <p:ajax event="change" update="metsParamaterForm mets-file-groups" />
         </p:selectBooleanButton>
     </p:panel>
@@ -28,89 +28,89 @@
         <p:row>
             <div>
                 <p:outputLabel for="metsRightsOwner" value="#{msgs.metsRightsOwner}" />
-                <p:inputText id="metsRightsOwner" placeholder="#{msgs.metsRightsOwner}" styleClass="input-with-button" value="#{ProjekteForm.myProjekt.metsRightsOwner}" disabled="#{ProjekteForm.locked}">
+                <p:inputText id="metsRightsOwner" placeholder="#{msgs.metsRightsOwner}" styleClass="input-with-button" value="#{ProjekteForm.myProjekt.metsRightsOwner}" disabled="#{ProjekteForm.lockedMets}">
                     <p:ajax event="blur"/>
                 </p:inputText>
-                <p:commandButton type="button" icon="fa fa-copy" onclick="copyToClipboard('editForm:tabs:metsRightsOwner')" disabled="#{ProjekteForm.locked}"/>
+                <p:commandButton type="button" icon="fa fa-copy" onclick="copyToClipboard('editForm:tabs:metsRightsOwner')" disabled="#{ProjekteForm.lockedMets}"/>
             </div>
             <div>
                 <p:outputLabel for="metsRightsOwnerUrl" value="#{msgs.metsRightsOwnerSite}" />
-                <p:inputText id="metsRightsOwnerUrl" placeholder="#{msgs.metsRightsOwnerSite}" styleClass="input-with-button" value="#{ProjekteForm.myProjekt.metsRightsOwnerSite}" disabled="#{ProjekteForm.locked}">
+                <p:inputText id="metsRightsOwnerUrl" placeholder="#{msgs.metsRightsOwnerSite}" styleClass="input-with-button" value="#{ProjekteForm.myProjekt.metsRightsOwnerSite}" disabled="#{ProjekteForm.lockedMets}">
                     <p:ajax event="blur"/>
                 </p:inputText>
-                <p:commandButton type="button" icon="fa fa-copy" onclick="copyToClipboard('editForm:tabs:metsRightsOwnerUrl')" disabled="#{ProjekteForm.locked}"/>
+                <p:commandButton type="button" icon="fa fa-copy" onclick="copyToClipboard('editForm:tabs:metsRightsOwnerUrl')" disabled="#{ProjekteForm.lockedMets}"/>
             </div>
             <div>
                 <p:outputLabel for="metsDigiprovReference" value="#{msgs.metsDigiprovReference}" />
-                <p:inputText id="metsDigiprovReference" placeholder="#{msgs.metsDigiprovReference}" styleClass="input-with-button" value="#{ProjekteForm.myProjekt.metsDigiprovReference}" disabled="#{ProjekteForm.locked}">
+                <p:inputText id="metsDigiprovReference" placeholder="#{msgs.metsDigiprovReference}" styleClass="input-with-button" value="#{ProjekteForm.myProjekt.metsDigiprovReference}" disabled="#{ProjekteForm.lockedMets}">
                     <p:ajax event="blur"/>
                 </p:inputText>
-                <p:commandButton type="button" icon="fa fa-copy" onclick="copyToClipboard('editForm:tabs:metsDigiprovReference')" disabled="#{ProjekteForm.locked}"/>
+                <p:commandButton type="button" icon="fa fa-copy" onclick="copyToClipboard('editForm:tabs:metsDigiprovReference')" disabled="#{ProjekteForm.lockedMets}"/>
             </div>
             <div>
                 <p:outputLabel for="metsDigiprovReferenceAnchor" value="#{msgs.metsDigiprovReferenceAnchor}" />
-                <p:inputText id="metsDigiprovReferenceAnchor" placeholder="#{msgs.metsDigiprovReferenceAnchor}" styleClass="input-with-button" value="#{ProjekteForm.myProjekt.metsDigiprovReferenceAnchor}" disabled="#{ProjekteForm.locked}">
+                <p:inputText id="metsDigiprovReferenceAnchor" placeholder="#{msgs.metsDigiprovReferenceAnchor}" styleClass="input-with-button" value="#{ProjekteForm.myProjekt.metsDigiprovReferenceAnchor}" disabled="#{ProjekteForm.lockedMets}">
                     <p:ajax event="blur"/>
                 </p:inputText>
-                <p:commandButton type="button" icon="fa fa-copy" onclick="copyToClipboard('editForm:tabs:metsDigiprovReferenceAnchor')" disabled="#{ProjekteForm.locked}"/>
+                <p:commandButton type="button" icon="fa fa-copy" onclick="copyToClipboard('editForm:tabs:metsDigiprovReferenceAnchor')" disabled="#{ProjekteForm.lockedMets}"/>
             </div>
             <div>
                 <p:outputLabel for="metsPointerPath" value="#{msgs.metsPointerPath}" />
-                <p:inputText id="metsPointerPath" placeholder="#{msgs.metsPointerPath}" styleClass="input-with-button" value="#{ProjekteForm.myProjekt.metsPointerPath}" disabled="#{ProjekteForm.locked}">
+                <p:inputText id="metsPointerPath" placeholder="#{msgs.metsPointerPath}" styleClass="input-with-button" value="#{ProjekteForm.myProjekt.metsPointerPath}" disabled="#{ProjekteForm.lockedMets}">
                     <p:ajax event="blur"/>
                 </p:inputText>
-                <p:commandButton type="button" icon="fa fa-copy" onclick="copyToClipboard('editForm:tabs:metsPointerPath')" disabled="#{ProjekteForm.locked}"/>
+                <p:commandButton type="button" icon="fa fa-copy" onclick="copyToClipboard('editForm:tabs:metsPointerPath')" disabled="#{ProjekteForm.lockedMets}"/>
             </div>
             <div>
                 <p:outputLabel for="metsPurl" value="#{msgs.metsPurl}" />
-                <p:inputText id="metsPurl" placeholder="#{msgs.metsPurl}" styleClass="input-with-button" value="#{ProjekteForm.myProjekt.metsPurl}" disabled="#{ProjekteForm.locked}">
+                <p:inputText id="metsPurl" placeholder="#{msgs.metsPurl}" styleClass="input-with-button" value="#{ProjekteForm.myProjekt.metsPurl}" disabled="#{ProjekteForm.lockedMets}">
                     <p:ajax event="blur"/>
                 </p:inputText>
-                <p:commandButton type="button" icon="fa fa-copy" onclick="copyToClipboard('editForm:tabs:metsPurl')" disabled="#{ProjekteForm.locked}"/>
+                <p:commandButton type="button" icon="fa fa-copy" onclick="copyToClipboard('editForm:tabs:metsPurl')" disabled="#{ProjekteForm.lockedMets}"/>
             </div>
         </p:row>
         <p:row>
             <div>
                 <p:outputLabel for="metsRightsOwnerLogo" value="#{msgs.metsRightsOwnerLogo}" />
-                <p:inputText id="metsRightsOwnerLogo" placeholder="#{msgs.metsRightsOwnerLogo}" styleClass="input-with-button" value="#{ProjekteForm.myProjekt.metsRightsOwnerLogo}" disabled="#{ProjekteForm.locked}">
+                <p:inputText id="metsRightsOwnerLogo" placeholder="#{msgs.metsRightsOwnerLogo}" styleClass="input-with-button" value="#{ProjekteForm.myProjekt.metsRightsOwnerLogo}" disabled="#{ProjekteForm.lockedMets}">
                     <p:ajax event="blur"/>
                 </p:inputText>
-                <p:commandButton type="button" icon="fa fa-copy" onclick="copyToClipboard('editForm:tabs:metsRightsOwnerLogo')" disabled="#{ProjekteForm.locked}"/>
+                <p:commandButton type="button" icon="fa fa-copy" onclick="copyToClipboard('editForm:tabs:metsRightsOwnerLogo')" disabled="#{ProjekteForm.lockedMets}"/>
             </div>
             <div>
                 <p:outputLabel for="metsRightsOwnerContact" value="#{msgs.metsRightsOwnerMail}" />
-                <p:inputText id="metsRightsOwnerContact" placeholder="#{msgs.metsRightsOwnerMail}" styleClass="input-with-button" value="#{ProjekteForm.myProjekt.metsRightsOwnerMail}" disabled="#{ProjekteForm.locked}">
+                <p:inputText id="metsRightsOwnerContact" placeholder="#{msgs.metsRightsOwnerMail}" styleClass="input-with-button" value="#{ProjekteForm.myProjekt.metsRightsOwnerMail}" disabled="#{ProjekteForm.lockedMets}">
                     <p:ajax event="blur"/>
                 </p:inputText>
-                <p:commandButton type="button" icon="fa fa-copy" onclick="copyToClipboard('editForm:tabs:metsRightsOwnerContact')" disabled="#{ProjekteForm.locked}"/>
+                <p:commandButton type="button" icon="fa fa-copy" onclick="copyToClipboard('editForm:tabs:metsRightsOwnerContact')" disabled="#{ProjekteForm.lockedMets}"/>
             </div>
             <div>
                 <p:outputLabel for="metsDigiprovPresentation" value="#{msgs.metsDigiprovPresentation}" />
-                <p:inputText id="metsDigiprovPresentation" placeholder="#{msgs.metsDigiprovPresentation}" styleClass="input-with-button" value="#{ProjekteForm.myProjekt.metsDigiprovPresentation}" disabled="#{ProjekteForm.locked}">
+                <p:inputText id="metsDigiprovPresentation" placeholder="#{msgs.metsDigiprovPresentation}" styleClass="input-with-button" value="#{ProjekteForm.myProjekt.metsDigiprovPresentation}" disabled="#{ProjekteForm.lockedMets}">
                     <p:ajax event="blur"/>
                 </p:inputText>
-                <p:commandButton type="button" icon="fa fa-copy" onclick="copyToClipboard('editForm:tabs:metsDigiprovPresentation')" disabled="#{ProjekteForm.locked}"/>
+                <p:commandButton type="button" icon="fa fa-copy" onclick="copyToClipboard('editForm:tabs:metsDigiprovPresentation')" disabled="#{ProjekteForm.lockedMets}"/>
             </div>
             <div>
                 <p:outputLabel for="metsPresentationAnchor" value="#{msgs.metsDigiprovPresentationAnchor}" />
-                <p:inputText id="metsPresentationAnchor" placeholder="#{msgs.metsDigiprovPresentationAnchor}" styleClass="input-with-button" value="#{ProjekteForm.myProjekt.metsDigiprovPresentationAnchor}" disabled="#{ProjekteForm.locked}">
+                <p:inputText id="metsPresentationAnchor" placeholder="#{msgs.metsDigiprovPresentationAnchor}" styleClass="input-with-button" value="#{ProjekteForm.myProjekt.metsDigiprovPresentationAnchor}" disabled="#{ProjekteForm.lockedMets}">
                     <p:ajax event="blur"/>
                 </p:inputText>
-                <p:commandButton type="button" icon="fa fa-copy" onclick="copyToClipboard('editForm:tabs:metsPresentationAnchor')" disabled="#{ProjekteForm.locked}"/>
+                <p:commandButton type="button" icon="fa fa-copy" onclick="copyToClipboard('editForm:tabs:metsPresentationAnchor')" disabled="#{ProjekteForm.lockedMets}"/>
             </div>
             <div>
                 <p:outputLabel for="metsPointerPathAnchor" value="#{msgs.metsPointerPathAnchor}" />
-                <p:inputText id="metsPointerPathAnchor" placeholder="#{msgs.metsPointerPathAnchor}" styleClass="input-with-button" value="#{ProjekteForm.myProjekt.metsPointerPathAnchor}" disabled="#{ProjekteForm.locked}">
+                <p:inputText id="metsPointerPathAnchor" placeholder="#{msgs.metsPointerPathAnchor}" styleClass="input-with-button" value="#{ProjekteForm.myProjekt.metsPointerPathAnchor}" disabled="#{ProjekteForm.lockedMets}">
                     <p:ajax event="blur"/>
                 </p:inputText>
-                <p:commandButton type="button" icon="fa fa-copy" onclick="copyToClipboard('editForm:tabs:metsPointerPathAnchor')" disabled="#{ProjekteForm.locked}"/>
+                <p:commandButton type="button" icon="fa fa-copy" onclick="copyToClipboard('editForm:tabs:metsPointerPathAnchor')" disabled="#{ProjekteForm.lockedMets}"/>
             </div>
             <div>
                 <p:outputLabel for="metsContentId" value="#{msgs.metsContentIDs}" />
-                <p:inputText id="metsContentId" placeholder="#{msgs.metsContentIDs}" styleClass="input-with-button" value="#{ProjekteForm.myProjekt.metsContentIDs}" disabled="#{ProjekteForm.locked}">
+                <p:inputText id="metsContentId" placeholder="#{msgs.metsContentIDs}" styleClass="input-with-button" value="#{ProjekteForm.myProjekt.metsContentIDs}" disabled="#{ProjekteForm.lockedMets}">
                     <p:ajax event="blur"/>
                 </p:inputText>
-                <p:commandButton type="button" icon="fa fa-copy" onclick="copyToClipboard('editForm:tabs:metsContentId')" disabled="#{ProjekteForm.locked}"/>
+                <p:commandButton type="button" icon="fa fa-copy" onclick="copyToClipboard('editForm:tabs:metsContentId')" disabled="#{ProjekteForm.lockedMets}"/>
             </div>
         </p:row>
     </p:panelGrid>
@@ -125,7 +125,7 @@
                 <p:commandLink oncomplete="PF('editFileGroupDialog').show()"
                                styleClass="buttonset button-blue"
                                update="@(.editDialog)"
-                               disabled="#{ProjekteForm.locked}"
+                               disabled="#{ProjekteForm.lockedMets}"
                                immediate="true">
                     <i class="fa fa-pencil-square-o fa-lg"/>
                     <f:setPropertyActionListener target="#{ProjekteForm.myFilegroup}"
@@ -137,7 +137,7 @@
                                title="#{msgs.filegroupLoeschen}"
                                onclick="if (!confirm('#{msgs.sollDieserEintragWirklichGeloeschtWerden}')) return"
                                oncomplete="jQuery('#editForm\\:saveButtonToggler').click()"
-                               styleClass="buttonset button-blue" disabled="#{ProjekteForm.locked}">
+                               styleClass="buttonset button-blue" disabled="#{ProjekteForm.lockedMets}">
                     <h:outputText><i class="fa fa-trash fa-lg"/></h:outputText>
                     <f:setPropertyActionListener target="#{ProjekteForm.myFilegroup}"
                                                  value="#{filegroup}"/>
@@ -152,7 +152,7 @@
                          styleClass="button-filled-green"
                          icon="fa fa-plus-circle fa-lg"
                          iconPos="right"
-                         disabled="#{ProjekteForm.locked}"
+                         disabled="#{ProjekteForm.lockedMets}"
                          immediate="true">
             <f:setPropertyActionListener target="#{ProjekteForm.zurueck}"
                                          value="/pages/projectEditMetsPopup"/>
