--- a/Kitodo/src/main/webapp/pages/projectEditDetail.xhtml
+++ b/Kitodo/src/main/webapp/pages/projectEditDetail.xhtml
@@ -19,7 +19,7 @@
         <p:selectBooleanButton
                 onLabel="#{msgs.locked}" offLabel="#{msgs.unlocked}"
                 onIcon="fa fa-lock fa-lg" offIcon="fa fa-unlock fa-lg"
-                value="#{ProjekteForm.locked}">
+                value="#{ProjekteForm.lockedDetail}">
             <p:ajax event="change" update="editDetailForm"/>
         </p:selectBooleanButton>
     </p:panel>
@@ -27,17 +27,17 @@
         <p:row>
             <div>
                 <p:outputLabel for="title" value="#{msgs.titel}" />
-                <p:inputText id="title" placeholder="#{msgs.titel}" class="input" value="#{ProjekteForm.myProjekt.title}" disabled="#{ProjekteForm.locked}" required="#{empty param['editForm:saveButtonToggler']}"/>
+                <p:inputText id="title" placeholder="#{msgs.titel}" class="input" value="#{ProjekteForm.myProjekt.title}" disabled="#{ProjekteForm.lockedDetail}" required="#{empty param['editForm:saveButtonToggler']}"/>
             </div>
             <div>
                 <p:outputLabel for="pages" value="#{msgs.numberImages}" />
-                <p:inputText id="pages" placeholder="10" class="input" value="#{ProjekteForm.myProjekt.numberOfPages}" disabled="#{ProjekteForm.locked}">
+                <p:inputText id="pages" placeholder="10" class="input" value="#{ProjekteForm.myProjekt.numberOfPages}" disabled="#{ProjekteForm.lockedDetail}">
                     <p:ajax event="blur"/>
                 </p:inputText>
             </div>
             <div>
                 <p:outputLabel for="band" value="#{msgs.numberVolumes}" />
-                <p:inputText id="band" placeholder="1" class="input" value="#{ProjekteForm.myProjekt.numberOfVolumes}" disabled="#{ProjekteForm.locked}">
+                <p:inputText id="band" placeholder="1" class="input" value="#{ProjekteForm.myProjekt.numberOfVolumes}" disabled="#{ProjekteForm.lockedDetail}">
                     <p:ajax event="blur"/>
                 </p:inputText>
             </div>
@@ -46,7 +46,7 @@
                 <p:selectOneMenu id="client"
                                  converter="#{clientConverter}"
                                  value="#{ProjekteForm.myProjekt.client}"
-                                 disabled="#{ProjekteForm.locked}">
+                                 disabled="#{ProjekteForm.lockedDetail}">
                     <f:selectItem itemLabel="#{msgs.clientNon}" itemValue="noClient"/>
                     <f:selectItems value="#{ProjekteForm.clients}" var="client" itemValue="#{client}"
                                    itemLabel="#{client.name}"/>
@@ -57,21 +57,21 @@
         <p:row>
             <div>
                 <p:outputLabel for="startdate" value="#{msgs.startdate}" />
-                <p:calendar id="startdate" styleClass="input-with-button" value="#{ProjekteForm.myProjekt.startDate}" showOn="button" disabled="#{ProjekteForm.locked}">
+                <p:calendar id="startdate" styleClass="input-with-button" value="#{ProjekteForm.myProjekt.startDate}" showOn="button" disabled="#{ProjekteForm.lockedDetail}">
                     <p:ajax event="dateSelect" oncomplete="jQuery('#editForm\\:saveButtonToggler').click()"/>
                     <p:ajax event="blur" oncomplete="jQuery('#editForm\\:saveButtonToggler').click()"/>
                 </p:calendar>
             </div>
             <div>
                 <p:outputLabel for="enddate" value="#{msgs.enddate}" />
-                <p:calendar id="enddate" styleClass="input-with-button" value="#{ProjekteForm.myProjekt.endDate}" showOn="button" disabled="#{ProjekteForm.locked}">
+                <p:calendar id="enddate" styleClass="input-with-button" value="#{ProjekteForm.myProjekt.endDate}" showOn="button" disabled="#{ProjekteForm.lockedDetail}">
                     <p:ajax event="dateSelect" oncomplete="jQuery('#editForm\\:saveButtonToggler').click()"/>
                     <p:ajax event="blur" oncomplete="jQuery('#editForm\\:saveButtonToggler').click()"/>
                 </p:calendar>
             </div>
             <div>
                <p:outputLabel for="projectIsActive" value="#{msgs.projectIsActive}" />
-               <p:selectBooleanCheckbox id="projectIsActive" class="input" value="#{ProjekteForm.myProjekt.active}" disabled="#{ProjekteForm.locked}">
+               <p:selectBooleanCheckbox id="projectIsActive" class="input" value="#{ProjekteForm.myProjekt.active}" disabled="#{ProjekteForm.lockedDetail}">
                    <p:ajax event="change" oncomplete="jQuery('#editForm\\:saveButtonToggler').click()" />
                </p:selectBooleanCheckbox>
             </div>
