--- a/Kitodo/src/main/webapp/pages/clients.xhtml
+++ b/Kitodo/src/main/webapp/pages/clients.xhtml
@@ -19,7 +19,8 @@
     <ui:define name="contentHeader">
         <h3>#{msgs.clients}</h3>
         <h:form id="clientForm" rendered="#{SecurityAccessController.isAdminOrHasAuthorityGlobal('addClient')}">
-            <p:menuButton value="#{msgs.newElement}" icon="fa fa-plus-circle fa-lg" iconPos="right" styleClass="button-filled-green">
+            <p:menuButton value="#{msgs.newElement}" icon="fa fa-plus-circle fa-lg" iconPos="right" styleClass="button-filled-green"
+                          id="newElementButton">
                 <p:menuitem value="#{msgs.newClient}" icon="ui-icon-plusthick" immediate="true"
                             action="#{ClientForm.newClient}" id="newClientButton"/>
             </p:menuButton>
