Fix styling clientEdit page and userEdit page's header

--- a/Kitodo/src/main/webapp/pages/clientEdit.xhtml
+++ b/Kitodo/src/main/webapp/pages/clientEdit.xhtml
@@ -62,7 +62,7 @@
     <ui:define name="pageTabView">
         <p:tabView id="clientsTabView">
             <p:tab id="clientsTab" title="#{msgs.client}">
-                <p:panelGrid id="clientEdit-grid" columns="2" cellpadding="10" layout="grid">
+                <p:panelGrid id="clientEdit-grid" columns="2" layout="grid">
                     <p:row>
                         <div>
                             <p:outputLabel for="nameInput" value="#{msgs.name}"/>
